<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dancer_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dancerNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/str_dancer_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_update_dancer"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintStart_toEndOf="@id/dancerNameValue"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@color/transparent"
            app:layout_constraintStart_toEndOf="@id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_delete_dancer"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/dancerClubLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/str_dancer_club"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/dancerNameValue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/dancerClubValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/dancerNameValue"
            app:layout_constraintStart_toEndOf="@id/dancerClubLabel"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dancerYearBirthLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/str_dancer_year_birth"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/dancerClubLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/dancerYearBirthValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/dancerClubValue"
            app:layout_constraintStart_toEndOf="@id/dancerYearBirthLabel"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dancerLeagueLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/str_dancer_league"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dancerYearBirthLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/dancerLeagueValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dancerLeagueLabel"
            app:layout_constraintTop_toBottomOf="@id/dancerYearBirthValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>